--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT_LOCAL_CLIENT=3000
-PORT_LOCAL_SERVER=4000
+PORT_LOCAL_SERVER=4001
 PORT_REMOTE_CLIENT=3000
 PORT_REMOTE_SERVER=4000
 # HOST_LOCAL_CLIENT = 192.168.43.1
@@ -8,17 +8,17 @@ PORT_REMOTE_SERVER=4000
 # HOST_LOCAL_SERVER = 0.0.0.0
 HOST_LOCAL_CLIENT = 127.0.0.1
 HOST_LOCAL_SERVER = 127.0.0.1
-HOST_REMOTE_CLIENT = https://eodh-b.onrender.com
-HOST_REMOTE_SERVER = https://eodh-b.onrender.com
+HOST_REMOTE_CLIENT = https://eodh-b2.onrender.com
+HOST_REMOTE_SERVER = https://eodh-b2.onrender.com
 # URL_LOCAL_CLIENT = http://192.168.43.1:3000
 # URL_LOCAL_SERVER = http://192.168.43.1:4000
 # URL_LOCAL_CLIENT = http://192.168.100.6:3000
 # URL_LOCAL_SERVER = http://192.168.100.6:4000
 URL_LOCAL_CLIENT = http://127.0.0.1:3000
 URL_LOCAL_SERVER = http://127.0.0.1:4000
-URL_REMOTE_CLIENT = https://eodh-b.onrender.com/
-URL_REMOTE_SERVER = https://eodh-b.onrender.com/
-DATABASE_PORT = 8000
+URL_REMOTE_CLIENT = https://eodh-b2.onrender.com/
+URL_REMOTE_SERVER = https://eodh-b2.onrender.com/
+DATABASE_PORT = 8001
 # DATABASE_URL = http://192.168.43.1:8000
 # DATABASE_URL = http://192.168.100.6:8000
 DATABASE_URL = http://127.0.0.1:8000
